--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
 # Project-wide Gradle settings.
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
 
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
